--- a/README.adoc
+++ b/README.adoc
@@ -22,6 +22,10 @@ include::docs/testing.adoc[]
 
 include::docs/container.adoc[]
 
+include::executor/README.adoc[]
+
+include::agent/Create-RPM.adoc[]
+
 == Documentation
 
 You can start the local doc server via:
