--- a/agent/Create-RPM.adoc
+++ b/agent/Create-RPM.adoc
@@ -13,9 +13,9 @@ To create the RPM, run:
 ----
 export CARGO_TARGET_DIR="$(pwd)/target"
 cargo clean
-cargo build -p n8w8d --release --target x86_64-unknown-linux-gnu
+cargo build -p n8w8d --release
 #strip -s ${CARGO_TARGET_DIR}/release/n8w8d
-cargo generate-rpm -p agent --target x86_64-unknown-linux-gnu
+cargo generate-rpm -p agent
 ----
 
 The final RPM file can be found in the target directory _${CARGO_TARGET_DIR}/generate-rpm_.
