🚧 create entities from db for rust

--- a/orm/README.adoc
+++ b/orm/README.adoc
@@ -32,3 +32,15 @@ If you are ok with the DDL, then run:
 ----
 liquibase update
 ----
+
+=== Generating entities for Rust
+
+We use SeaORM, so:
+
+[,shell]
+----
+cargo install sea-orm-cli
+sea-orm-cli generate entity -u postgresql://n8w8adm:n8w8admpw@localhost:25432/n8w8db -o src --with-serde both
+----
+
+This will create the entities to be used by SeaOrm.
