--- a/orm/README.adoc
+++ b/orm/README.adoc
@@ -12,7 +12,7 @@ Run this:
 podman build -t n8w8db:latest -f db.Containerfile
 
 # to run it (we start with a clean fresh db!!)
-podman run -it --rm -p 25432:5432 n8w8db:latest
+podman run --detach --rm -p 25432:5432 --name n8w8devdb n8w8db:latest
 ----
 
 Perhaps you need to tweak your local database port _25432_ on your machine.
@@ -40,7 +40,7 @@ We use SeaORM, so:
 [,shell]
 ----
 cargo install sea-orm-cli
-sea-orm-cli generate entity -u postgresql://n8w8adm:n8w8admpw@localhost:25432/n8w8db -o src/entities --with-serde both
+sea-orm-cli generate entity -u postgresql://n8w8adm:n8w8admpw@localhost:25432/n8w8db -o src/entities --with-serde both --expanded-format
 ----
 
 This will create the entities to be used by SeaOrm.
