--- a/docs/rhel8.adoc
+++ b/docs/rhel8.adoc
@@ -6,7 +6,7 @@ Using podman:
 
 [,shell]
 ----
-podman run -it --rm -v $(pwd):/src -v $(pwd)/out:/out -e CARGO_BUILD_TARGET='x86_64-unknown-linux-gnu' -e CARGO_TARGET_DIR=/tmp/n8w8-rust -e SRC_DIR=/src --hostname rpmbuilder oraclelinux:8
+podman run -it --rm -v $(pwd):/src -v $(pwd)/out:/out -e CARGO_BUILD_TARGET='x86_64-unknown-linux-gnu' -e CARGO_TARGET_DIR=/tmp/n8w8-rust -e SRC_DIR=/src --hostname rpmbuilder -e CARGO_HOME=/tmp/cargo oraclelinux:8
 ----
 
 Inside the container we can now build the RPM:
@@ -18,7 +18,7 @@ dnf -y install rpmdevtools rpm-build rpm-sign gcc openssl-devel pkg-config
 
 # create rust binary
 curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh  -s -- --profile minimal -y
-source "$HOME/.cargo/env"
+source "${CARGO_HOME}/env"
 rustup target add ${CARGO_BUILD_TARGET}
 cargo clean
 cargo build -p n8w8d --release
