N8W8-8 Create Prometheus Exporter mode for n8w8d

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+# v0.3.0
+
+* dummy CLI to check a kubernetes cluster
+
+# v0.2.0
+
+* add a prometheus endpoint so that prometheus can query the instance
+
 # v0.1.0
 
 * simple helloworld website
