--- a/README.adoc
+++ b/README.adoc
@@ -16,6 +16,8 @@ _Nachtwacht_ is the german name for _nightwatch_. It comes from the people
 who were watching over a city at night. Similar to what DevOps people
 are doing nowadays with servers and clouds during the night.
 
+include::docs/env.adoc[leveloffset=1]
+
 include::docs/building.adoc[]
 
 include::docs/testing.adoc[]
