--- a/docs/building.adoc
+++ b/docs/building.adoc
@@ -1,4 +1,5 @@
-== How to build the whole project
+= How to build the whole project
+:toc:
 
 First, update your rust implementation via:
 
@@ -30,3 +31,17 @@ You can set up your local build to build against a different target architecture
 # To get all architecture targets
 rustc --print target-list
 ----
+
+== Package Documentation
+
+You can start the local doc server via:
+
+[,shell]
+----
+cargo doc --open
+----
+
+This will open your default browser with the documentation of the project.
+
+include::env.adoc[leveloffset=+1]
+include::rhel8.adoc[leveloffset=+1]
