--- a/docs/env.adoc
+++ b/docs/env.adoc
@@ -1,4 +1,4 @@
-= Where do you want to build today?
+= Building in containers
 
 The question is: where do you want to build/run this project? There are several ways.
 
