--- a/docs/releasing.adoc
+++ b/docs/releasing.adoc
@@ -1,4 +1,4 @@
-== Create Releases
+= Create Releases
 
 To create a final release, we have to specify the target architecture.
 We support (for now):
@@ -14,7 +14,7 @@ cargo build --workspace -p n8w8d --all-targets --release --target x86_64-unknown
 
 The binaries are now in _target/x86_64-unknown-linux-gnu/release_.
 
-=== Testing with other Operating Systems
+== Testing with other Operating Systems
 
 You can use podman for this:
 
@@ -27,7 +27,7 @@ podman run -it --rm -v $(pwd)/target/x86_64-unknown-linux-gnu/release:/work orac
 
 Note: you need to have at least GLibC 2.33 or higher installed!
 
-=== Building for older Linux Distributions
+== Building for older Linux Distributions
 
 It is recommended to build them in their own podman container.
 
@@ -51,7 +51,7 @@ cp /tmp/n8w8-rust/x86_64-unknown-linux-gnu/release/n8w8d /out/n8w8d-oraclelinux8
 
 This way, the n8w8d binary is compiled solely for this machine type/distro. Now you may create an RPM for this.
 
-=== Distribute to other machines
+== Distribute to other machines
 
 Use scp:
 
@@ -60,3 +60,5 @@ scp target/x86_64-unknown-linux-gnu/release/n8w8d user@machine:
 ----
 
 Via _ldd_ you can also check if the correct library references are set.
+
+include::packaging.adoc[leveloffset=+1]
